# slackify

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  Procfile  README.md  SECURITY.md  app,json  app.json  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: ci-checks.yml  codeql-analysis.yml  pythonpackage.yml
docs/: api_reference.rst  blueprint.html  conf.py  dispatcher.html  index.html  index.rst  injection.html  main.html  slack.html  tasks.html
docs/_build/doctrees/: api_reference.doctree  environment.pickle  examples.doctree  getting_started.doctree  index.doctree
docs/_build/html/: .buildinfo  api_reference.html  examples.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  slackify.html
docs/_build/html/_sources/: examples.rst.txt  getting_started.rst.txt  slackify.rst.txt
examples/: actions.py  as_blueprint.py  async_task.py  commands.py  events.py  full.py  home_tab.py  injection.py  message.py  shortcuts.py  using_blocks.py  views.py
src/application/: dispatcher.py  server.py
src/flask_slack/: Payloads.MD  __init__.py  dispatcher.py  flack.py  server.py  slack.py  tasks.py
src/slackify/: __init__.py  blueprint.py  dispatcher.py  flack.py  injection.py  injector.py  main.py  slack.py  tasks.py
templates/: head.mako  html.mako  logo.mako
tests/: conftest.py  test_app.py  test_blueprint.py  test_injector.py  test_slack.py  test_tasks.py
tests/examples/: test_message.py
