[tool.poetry]
name = "slackify"
version = "1.0.0"
description = "Quickly develop modern slack bots"
authors = ["Ambro17 <ambro17.1@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1"
Flask = ">=1.0.0"
slackclient = ">=2.5.0"
requests = ">=2.0.0"
pyee = ">=7.0.0"

[tool.poetry.dev-dependencies]
codecov = "^2.1.9"
flake8 = "^3.8.4"
mypy = "^0.782"
pre-commit = "^2.7.1"
pytest = "^6.1.0"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
Sphinx = "^3.2.1"
sphinx-rtd-theme = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
